--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "firebase": "^4.5.0",
+    "moment": "^2.19.1",
     "vue": "^2.3.3",
     "vue-cookie": "^1.1.4",
     "vue-router": "^2.3.1",
