--- a/static/manifest.json
+++ b/static/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "sistema-monitorias",
-  "short_name": "sistema-monitorias",
+  "name": "MonitoClub",
+  "short_name": "MonitoClub",
   "icons": [
     {
       "src": "/static/img/icons/android-chrome-192x192.png",
@@ -16,5 +16,5 @@
   "start_url": "/",
   "display": "standalone",
   "background_color": "#000000",
-  "theme_color": "#4DBA87"
+  "theme_color": "#1976d2"
 }
